--- a/manifest.json
+++ b/manifest.json
@@ -19,8 +19,7 @@
     "https://www.google.com/*"
   ],
   "permissions": [
-    "tabs",
-    "scripting"
+    "tabs"
   ],
   "content_scripts": [
     {
